2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560568 – gkeyfile docs buglet

	* glib/gkeyfile.c: Clarify the docs.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560569 – gkeyfile doesn't use the set list_separator in some cases

	* glib/gkeyfile.c: (g_key_file_get_locale_string_list),
	(g_key_file_set_locale_string_list), (g_key_file_set_integer_list),
	(g_key_file_set_double_list): Use the key file's list separator character,
	not the default one.

	* glib/tests/keyfile.c: (test_lists), (test_reload_idempotency): Test
	this.

2008-11-23  Hans Breuer  <hans@breuer.org>

	* tests/makefile.msc : updated

	* glib/makefile.msc.in : add -DG_DISABLE_DEPRECTAED; rule for 
	localcharset.obj; filter out G_GNUC_FORMAT

	* glib/pcre/makefile.msc : unbroken

2008-11-21  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* glib/ghash.c: Small documentation fix by Joseph Pingenot.

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 557210 – g_compute_checksum_for_* asserts with less than 2
	bytes

	* glib/gchecksum.c (g_compute_checksum_for_data): Accept
	lengths < 2. Patch by Tommi Komulainen

2008-10-31  Grahame Bowland  <grahame@angrygoats.net>

	Bug 558185 – 'parent' variable in g_local_file_get_child_for_display_name() 
	hits g_object_unref(NULL) assertion

	* gio/glocalfile.c: 
	- remove unused variable. Patch by Matt Johnston <matt@ucc.asn.au>

2008-10-20 Christian Persch <chpe@gnome.org>

	Bug 557087 – mem leak in g_content_types_get_registered
		
	* gio/gcontenttype.c: Plug a mem leak.

2008-10-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.2 ===

2008-10-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-10-08  Christian Persch  <chpe@gnome.org>
